<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.icolasoft.scroggle</groupId>
  <artifactId>scroggle-server</artifactId>
  <version>1.0-SNAPSHOT</version>

  <packaging>pom</packaging>
  <name>ROOT: Scroggle Server</name>
  <url>http://maven.apache.org</url>

  <properties>
    <!-- General Settings -->
    <java.version>1.7</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <server.port>9092</server.port>
    <jetty.jvmargs>-Xms512m -Xmx2048m -XX:PermSize=512m -XX:MaxPermSize=1024m</jetty.jvmargs>

    <!-- Dependency Versioning -->
    <spring.version>4.2.0.RELEASE</spring.version>
    <spring.data.mongo.version>1.7.2.RELEASE</spring.data.mongo.version>
    <mongo.driver.version>3.0.3</mongo.driver.version>
    <jackson.version>2.6.1</jackson.version>
    <servlet.api.version>3.1.0</servlet.api.version>
    <jackson.mapper.version>1.9.12</jackson.mapper.version>

    <slf4j.version>1.6.1</slf4j.version>

    <newrelic.version>3.10.0</newrelic.version>
    <newrelic.key>368cb9eec8734c214d2cd716141cd8e80f03f455</newrelic.key>

    <commons.email.version>1.3.2</commons.email.version>
  </properties>

  <modules>
    <module>models</module>
    <module>dao</module>
    <module>business</module>
    <module>services</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>com.newrelic.agent.java</groupId>
      <artifactId>newrelic-java</artifactId>
      <version>${newrelic.version}</version>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.newrelic.agent.java</groupId>
      <artifactId>newrelic-api</artifactId>
      <version>${newrelic.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.codehaus.groovy.maven.runtime</groupId>
      <artifactId>gmaven-runtime-1.6</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.groovy.maven</groupId>
          <artifactId>gmaven-plugin</artifactId>
          <version>1.0</version>
          <executions>
            <execution>
              <goals>
                <goal>generateStubs</goal>
                <goal>compile</goal>
                <goal>generateTestStubs</goal>
                <goal>testCompile</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.6</version>
          <executions>
            <execution>
              <id>unpack-zip</id>
              <phase>package</phase>
              <goals>
                <goal>unpack-dependencies</goal>
              </goals>
              <configuration>
                <artifactItems>
                  <artifactItem>
                    <groupId>com.newrelic.agent.java</groupId>
                    <artifactId>newrelic-java</artifactId>
                    <version>${newrelic.version}</version>
                    <type>zip</type>
                    <overWrite>true</overWrite>
                    <outputDirectory>target</outputDirectory>
                    <destFileName>newrelic</destFileName>
                  </artifactItem>
                </artifactItems>
                <outputDirectory>${user.home}/cots/newrelic</outputDirectory>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.5.1</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <verbose>false</verbose>
            <compilerArgument>-Xlint:all</compilerArgument>
            <showWarnings>true</showWarnings>
            <showDeprecation>true</showDeprecation>
            <debug>true</debug>
            <debuglevel>lines,vars,source</debuglevel>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.3</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.0.4</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>TEST</id>
      <properties>
        <spring.profile>test</spring.profile>
      </properties>
    </profile>
    <profile>
      <id>DEV</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <spring.profile>dev</spring.profile>
      </properties>
    </profile>
    <profile>
      <id>PROD</id>
      <properties>
        <spring.profile>prod</spring.profile>
      </properties>
    </profile>
  </profiles>


  <repositories>
    <repository>
      <id>spring-maven-release</id>
      <name>Spring Maven Release Repository</name>
      <url>http://maven.springframework.org/release</url>
    </repository>
    <repository>
      <id>spring-maven-milestone</id>
      <name>Spring Maven Milestone Repository</name>
      <url>http://maven.springframework.org/milestone</url>
    </repository>
  </repositories>
</project>
